--- a/.github/workflows/weather-data.yml
+++ b/.github/workflows/weather-data.yml
@@ -29,4 +29,4 @@ jobs:
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git add data/weather/
         git commit -m "Daily weather data update: $(date)"
-        git push https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }} HEAD:main
+        git push https://x-access-token:${GH_TOKEN}@github.com/LilianaMPereira/COMPUTER_INFRASTRUCTURE.git HEAD:main
